--- a/package.json
+++ b/package.json
@@ -1,9 +1,11 @@
 {
   "name": "online-checker",
   "version": "0.0.1",
+  "private": true,
   "description": "",
   "main": "index.js",
   "scripts": {
+    "start": "node ./index",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -15,5 +17,9 @@
   "bugs": {
     "url": "https://github.com/CyanoFresh/online-checker/issues"
   },
-  "homepage": "https://github.com/CyanoFresh/online-checker#readme"
+  "homepage": "https://github.com/CyanoFresh/online-checker#readme",
+  "dependencies": {
+    "axios": "^0.19.0",
+    "dotenv": "^8.0.0"
+  }
 }
