--- a/now.json
+++ b/now.json
@@ -1,5 +1,5 @@
 {
-  "builds": [{ "src": "**/*.js", "use": "@now/node" }],
+  "builds": [{ "src": "index.js", "use": "@now/node" }],
   "env": {
     "BOT_TOKEN": "@bot-token",
     "BOT_CHAT_ID": "@bot-chat-id"
