--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
   },
   "homepage": "https://github.com/CyanoFresh/online-checker#readme",
   "dependencies": {
-    "axios": "^0.19.0",
+    "axios": "^0.19.0"
+  },
+  "devDependencies": {
     "dotenv": "^8.0.0"
   }
 }
